--- a/packages/plugins/@nocobase/plugin-field-sequence/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-field-sequence/src/locale/nl-NL.json
@@ -1,24 +1,24 @@
 {
-    "Sequence": "Sequence",
-    "Sequence rules": "Sequence rules",
-    "Add rule": "Add rule",
-    "Inputable": "Inputable",
-    "Match rules": "Match rules",
+    "Sequence": "Reeks",
+    "Sequence rules": "Reeksregels",
+    "Add rule": "Voeg regel toe",
+    "Inputable": "Invoerbaar",
+    "Match rules": "Matchregels",
     "Type": "Type",
-    "Autoincrement": "Autoincrement",
-    "Fixed text": "Fixed text",
-    "Text content": "Text content",
-    "Rule content": "Rule content",
-    "{{value}} Digits": "{{value}} Digits",
-    "Digits": "Digits",
-    "Start from": "Start from",
-    "Starts from {{value}}": "Starts from {{value}}",
-    "Reset cycle": "Reset cycle",
-    "No reset": "No reset",
+    "Autoincrement": "Automatisch verhogen",
+    "Fixed text": "Vaste tekst",
+    "Text content": "Tekstinhoud",
+    "Rule content": "Regelinhoud",
+    "{{value}} Digits": "{{value}} cijfers",
+    "Digits": "Cijfers",
+    "Start from": "Start vanaf",
+    "Starts from {{value}}": "Start vanaf {{value}}",
+    "Reset cycle": "Cyclus resetten",
+    "No reset": "Geen reset",
     "Daily": "Dagelijks",
-    "Every Monday": "Every Monday",
+    "Every Monday": "Iedere maandag",
     "Monthly": "Maandelijks",
     "Yearly": "Jaarlijks",
-    "Operations": "Operations",
+    "Operations": "Operaties",
     "Customize": "Pas aan"
 }
