--- a/packages/plugins/@nocobase/plugin-field-sequence/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-field-sequence/src/locale/nl-NL.json
@@ -1,5 +1,6 @@
 {
     "Sequence": "Reeks",
+    "Automatically generate codes based on configured rules, supporting combinations of dates, numbers, and text.": "Automatisch codes genereren op basis van geconfigureerde regels, met ondersteuning voor combinaties van datums, nummers en tekst.",
     "Sequence rules": "Reeksregels",
     "Add rule": "Voeg regel toe",
     "Inputable": "Invoerbaar",
@@ -8,6 +9,9 @@
     "Autoincrement": "Automatisch verhogen",
     "Fixed text": "Vaste tekst",
     "Text content": "Tekstinhoud",
+    "Date": "Datum",
+    "Date format": "Datumformaat",
+    "Supports all formats of the Day.js library, such as \"YYYYMMDD\", \"YYYY-MM-DD\", etc.": "Ondersteunt alle formaten van de Day.js-bibliotheek, zoals \"YYYYMMDD\", \"YYYY-MM-DD\", enz.",
     "Rule content": "Regelinhoud",
     "{{value}} Digits": "{{value}} cijfers",
     "Digits": "Cijfers",
@@ -20,5 +24,14 @@
     "Monthly": "Maandelijks",
     "Yearly": "Jaarlijks",
     "Operations": "Operaties",
-    "Customize": "Pas aan"
+    "Customize": "Pas aan",
+    "Random character": "Willekeurig karakter",
+    "Length": "Lengte",
+    "Will generate random characters with specified length.": "Genereert willekeurige tekens met de opgegeven lengte.",
+    "Character sets": "Karaktersets",
+    "Select character sets to generate random characters.": "Selecteer karaktersets om willekeurige tekens te genereren.",
+    "Number": "Nummer",
+    "Lowercase letters": "Kleine letters",
+    "Uppercase letters": "Hoofdletters",
+    "Symbols": "Symbolen"
 }
