refactor(plugin-field-sequence): change rule configuration to standard modal

--- a/packages/plugins/@nocobase/plugin-field-sequence/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-field-sequence/src/locale/zh-CN.json
@@ -4,6 +4,8 @@
   "Sequence rules": "编号规则",
   "Add rule": "添加规则",
   "Inputable": "可输入",
+  "Allow users to input values manually.": "允许用户手动输入值。",
+  "Input value must match the rules set above.": "输入的值必须与上方设置的规则匹配。",
   "Match rules": "输入必须匹配规则",
   "Type": "类型",
   "Autoincrement": "自增数字",
@@ -29,7 +31,7 @@
   "Length": "长度",
   "Will generate random characters with specified length.": "将生成指定长度的随机字符。",
   "Character sets": "字符集",
-  "Select character sets to generate random characters.": "选择用于生成随机字符的字符集。",
+  "Select character sets to generate random characters. Otherwise an invalid error will show when submit.": "选择用于生成随机字符的字符集。否则提交时将提示错误。",
   "Number": "数字",
   "Lowercase letters": "小写字母",
   "Uppercase letters": "大写字母",
